# vim-adiog

./: .cxxvimrc  .vimrc  .ycm_extra_conf.py  _vimrc  setup.sh
after/ftplugin/: c.vim  cpp.vim  dcxml.vim  erlang.vim  javascript.vim  json.vim  python.vim  sh.vim  tex.vim  vim.vim  xml.vim
after/syntax/: plaintex.vim  tex.vim  tex.vim__
colors/: adiog.vim  google.vim  solarized.vim
plugin/: adiog.vim  clion.vim  colorswitcher.vim  dcxml.vim  filetypes.vim  google.vim  tex.vim
template/: CMakeLists.txt  EXEC  Makefile  cpp.Makefile  erl  esh  py  sh  tex
